# DropWebP

./: .editorconfig  .gitmodules  .prettierignore  .tool-versions  DropWebP.sln  ReadMe.md  StyleCop.Analyzers.ruleset  appveyor.yml  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  stylecop.json  vite.config.ts
DropWebP/: .editorconfig  App.config  App.xaml  App.xaml.cs  DropWebP.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Usings.cs  app.manifest  appsettings.json  stylecop.json
DropWebP (Package)/: DropWebP (Package).wapproj  DropWebP (Package)_TemporaryKey.pfx  Package.appxmanifest
DropWebP.Core/: DropWebP.Core.csproj
DropWebP.Core/Helpers/: Json.cs
DropWebP.Core/Services/: FileService.cs
DropWebP/Activation/: ActivationHandler.cs  DefaultActivationHandler.cs  IActivationHandler.cs
DropWebP/Behaviors/: NavigationViewHeaderBehavior.cs  NavigationViewHeaderMode.cs
DropWebP/Exceptions/: WebPException.cs
DropWebP/Helpers/: BitmapToImageSource.cs  DwmApi.cs  EnumToBooleanConverter.cs  FlyoutsControlRegionAdapter.cs  FolderPicker.cs  FrameExtensions.cs  NavigationHelper.cs  ResourceExtensions.cs  RuntimeHelper.cs  SettingsStorageExtensions.cs  TitleBarHelper.cs
DropWebP/Interfaces/: IFlyoutService.cs  IFlyoutView.cs  IInitializeWithWindow.cs  ILocalizeService.cs  ILocalizerService.cs  ILoggerService.cs  IStatusBarViewModel.cs  IWebPEncorderService.cs  IWebPService.cs  IWindowNative.cs
DropWebP/Models/: AppAssembly.cs  AppAssemblyModel.cs  LocalSettingsOptions.cs
DropWebP/Properties/: Resources.Designer.cs  Resources.ja-jp.resx  Resources.ja.resx  Resources.ko-KR.resx  Resources.resx  Settings.Designer.cs  Settings.settings  launchsettings.json
DropWebP/Service/: WebPEncorderService.cs  WebPService.cs
DropWebP/Services/: ActivationService.cs  LocalSettingsService.cs  LocalizeService.cs  LocalizerService.cs  LoggerService.cs  MessageService.cs  MetroDialogService.cs  NavigationService.cs  NavigationViewService.cs  PageService.cs  StatusBarService.cs  ThemeSelectorService.cs  WebPService.cs
DropWebP/Styles/: FontSizes.xaml  TextBlock.xaml  Thickness.xaml
DropWebP/Utility/: BitmapToImageSource.cs  FlyoutsControlRegionAdapter.cs  FoldarPickerEx.cs  Messenger.cs  MetroDialogWindow.cs  Notify.cs  UpdateStatusBar.cs
DropWebP/ViewModels/: AboutDialogViewModel.cs  AboutTabItemViewModel.cs  ConfigFlyoutViewModel.cs  ConfigTabItemViewModel.cs  DragNDropControlViewModel.cs  HomeContentViewModel.cs  HomeTabItemlViewModel.cs  MainViewModel.cs  MainWindowViewModel.cs  SettingsViewModel.cs  ShellViewModel.cs  ShellWindowViewModel.cs  StatusBarViewModel.cs
DropWebP/Views/: AboutDialog.xaml  AboutDialog.xaml.cs  AboutTabItem.xaml  AboutTabItem.xaml.cs  ConfigFlyout.xaml  ConfigFlyout.xaml.cs  ConfigTabItem.xaml  ConfigTabItem.xaml.cs  DragNDropControl.xaml  DragNDropControl.xaml.cs  HomeContent.xaml  HomeContent.xaml.cs  HomeTabItem.xaml  HomeTabItem.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  ShellPage.xaml  ShellPage.xaml.cs  ShellWindow.xaml  ShellWindow.xaml.cs  StatusBar.xaml  StatusBar.xaml.cs
docs/: index.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  decoder.rs  encoder.rs  error.rs  lib.rs  main.rs  options.rs
src/components/: AppBarMenuComponent.vue  LocaleSelector.vue  MainContent.vue  ProgressDialog.vue
src/composables/: useFileSystem.ts  useImageConversionController.ts  useImageConverter.ts  usePaste.ts  useWebPConverter.ts
src/interfaces/: AvifOptions.ts  CommonOptions.ts  (+3 more)
(+33 files in other folders)
