[package]
name = "drop-webp"
version = "2.0.0"
description = "DropWebP2 is a desktop application that converts images to WebP format using drag-and-drop functionality. Built with Vite, Vue 3, TypeScript, and Tauri."
authors = ["Logue"]
license = "MIT"
repository = ""
edition = "2024"
style_edition = "2024"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "drop_webp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
image = "0.25.6"
log = "0.4.27"
libwebp-sys = "0.13.3" 
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-log = "2.6.0"
tauri-plugin-dialog = "2.3.3"
