[package]
name = "drop-webp"
version = "2.0.0"
description = "DropWebP is a desktop application that converts images to WebP format using drag-and-drop functionality. Built with Vite, Vue 3, TypeScript, and Tauri."
authors = ["Logue"]
license = "MIT"
repository = "https://github.com/logue/DropWebP"
edition = "2024"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "drop_webp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
pkg-config = "0.3.32"
tauri-build = { version = "2.4.0", features = [] }
cc = "1.2.35"                                      # FFIビルド用

[dependencies]
image = "0.25.6"
kamadak-exif = "0.6.1"
libheif-rs = "2.3.0"
libwebp-sys = "0.13.3"
jpeg2k = "0.10.1"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-dialog = "2.3.3"
tauri-plugin-fs = "2.4.2"
tauri-plugin-log = "2.6.0"
tauri-plugin-opener = "2.5.0"
