[package]
name = "drop-compress-image"
version = "2.0.0"
description = "DropCompressImage is a desktop application that converts images to WebP format using drag-and-drop functionality. Built with Vite, Vue 3, TypeScript, and Tauri."
authors = ["Logue"]
license = "MIT"
repository = "https://github.com/logue/DropWebP"
edition = "2024"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "drop_compress_image_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.35"
pkg-config = "0.3.32"
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
bytemuck = "1.23.2"
image = "0.25.8"
imgref = "1.11.0"
jpeg2k = "0.10.1"
kamadak-exif = "0.6.1"
libheif-rs = "2.3.0"
libwebp-sys = "0.13.3"
ravif = "0.12.0"
rgb = "0.8.52"
serde = "1.0.219"
serde_json = "1.0.143"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-log = "2.7.0"
tauri-plugin-opener = "2.5.0"
